--- a/quick-catchup-parent/gwt-stuff/src/main/webapp/StockWatcher.css
+++ b/quick-catchup-parent/gwt-stuff/src/main/webapp/StockWatcher.css
@@ -34,20 +34,28 @@ body {
   margin: 10px 0px 15px 0px;
 }
 
-    /* stock list, the Remove button */
-    .gwt-Button-remove {
-      width: 50px;
-    }
+/* stock list, the Remove button */
+.gwt-Button-remove {
+  width: 50px;
+}
 
-    /* Dynamic color changes for the Change field */
-    .noChange {
-      color: black;
-    }
+/* Dynamic color changes for the Change field */
+.noChange {
+  color: black;
+}
 
-    .positiveChange {
-      color: green;
-    }
+.positiveChange {
+  color: green;
+}
 
-    .negativeChange {
+.negativeChange {
+  color: red;
+}
+
+.negativeChange {
       color: red;
-    }
+}
+
+.errorMessage {
+     color: red;
+}
